# monoengine

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  imgui.ini  monoEngine.sublime-workspace  run.sh
contrib/glfw/lib/cmake/glfw/: glfwConfig.cmake
contrib/glfw/lib/pkgconfig/: glfw3.pc
shader/gui/: gui.frag  gui.vert
shader/test/: basicdraw.vert  color.frag  instancedraw.vert  instancedraw2.vert  multidraw.vert  red.frag  triangle.vert
src/: demo.cpp  demo.hpp  demo2.cpp  demo2.hpp  main.cpp
src/engine/: debug.cpp  debug.hpp  engine.cpp  engine.hpp  gui.cpp  gui.hpp  object.cpp  object.hpp  window.cpp  window.hpp
src/engine/core/: camera.cpp  camera.hpp  input.cpp  input.hpp  log.cpp  log.hpp
src/engine/gl/: buffer.cpp  buffer.hpp  framebuffer.cpp  framebuffer.hpp  glinclude.hpp  globject.cpp  globject.hpp  program.cpp  program.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  timer.cpp  timer.hpp  uniform.hpp  vertexarray.cpp  vertexarray.hpp
